<resources>
    <string name="app_name">SignNScan PDF</string>
    <string name="docsign">SignNScan PDF</string>
    <string name="docsign_non">SignNScan</string>
    <string name="language_options">Language Options</string>
    <string name="location">Location:</string>
    <string name="no_files_yet">No files yet</string>
    <string name="import_images_or_scan_with_your_camera_to_generate_pdfs">Import images or scan with your camera\n to generate Pdfs</string>
    <string name="welcome_to_image_to_pdf">Welcome\n Image to PDF</string>
    <string name="actions">Actions</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview</string>
    <string name="pick_from_image_library">Pick From Image Library</string>
    <string name="delete">Delete</string>
    <string name="delete_document">Delete Document</string>
    <string name="image">Image</string>
    <string name="all_files">All Files</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="spanish">Español</string>
    <string name="franch">Français</string>
    <string name="german">Deutsch</string>
    <string name="mandarin">Mandarin</string>
    <string name="indonesian">indonesian</string>
    <string name="portuguese">Português</string>
    <string name="academic_docs_empty">No Academic Docs Scanned Yet.</string>
    <string name="all_docs_empty">No Document Scanned Yet.</string>
    <string name="applying_filter">Applying filter</string>
    <string name="auto">Auto</string>
    <string name="b_and_w">B/W</string>
    <string name="business_card_empty">No Business Card Scanned Yet.</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="done">Done</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="gray">Gray</string>
    <string name="id_card_empty">No ID Card Scanned Yet.</string>
    <string name="loading">Loading</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
    <string name="ok">Ok</string>
    <string name="original">Original</string>
    <string name="personal_tag_empty">No Personal Tag Scanned Yet.</string>
    <string name="placementId">video</string>
    <string name="please_hold_the_device_horizontally">Please hold the device horizontally and match the blue line in book\'s binding line</string>
    <string name="scan">Next</string>
    <string name="continue1">Continue</string>
    <string name="scanning">Scanning</string>
    <string name="search_menu_title">Search</string>
    <string name="single_id_card_txt">Make a one side ID card with ready for print.</string>
    <string name="two_id_card_txt">Make a two side ID card with ready for print.</string>
    <string name="retake">Retake</string>
    <string name="color">Color</string>
    <string name="ocvBlack">OCV Black</string>
    <string name="sharpBlack">Sharp Black</string>
    <string name="edit">Edit Page</string>
    <string name="rotate">Rotate</string>
    <string name="highlight">Highlight</string>
    <string name="eraser">Eraser</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="create">Create</string>
    <string name="saved_sig">Saved sig</string>
    <string name="createSig">Create Sig</string>
    <string name="font">Font</string>
    <string name="Opacity">Opacity</string>
    <string name="alignment">Alignment</string>
    <string name="generate">Generate More</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="addNew">Add New</string>
    <string name="scrap">Scrap</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="horizontal">Horizontal</string>
    <string name="verticle">Vertical</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="subscript">Subscript</string>
    <string name="superscript">Superscript</string>
    <string name="strikethrough">Strike</string>
    <string name="underline">Underline</string>
    <string name="headline1">Headline1</string>
    <string name="headline2">Headline2</string>
    <string name="headline3">Headline3</string>
    <string name="headline4">Headline4</string>
    <string name="headline5">Headline5</string>
    <string name="headline6">Headline6</string>
    <string name="redText">Red Text</string>
    <string name="indent">Indent</string>
    <string name="outdent">Outdent</string>
    <string name="leftText">Left Text</string>
    <string name="center">Center</string>
    <string name="rightText">Right Text</string>
    <string name="lineDot">Line Dot</string>
    <string name="number">Number</string>
    <string name="checkMark">Check Mark</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="noDocumentScan">No Document Scanned Yet.</string>
    <string name="cropDocument">Crop Document</string>
    <string name="rotateDoc">Rotate Doc</string>
    <string name="currentFilter">Current Filter</string>
    <string name="editorDocument">Editor Document</string>
    <string name="colorFilter">Color Filter</string>
    <string name="adjust">Adjust</string>
    <string name="size">Size</string>
    <string name="noSignFound">No Signature Found...</string>
    <string name="clear">Clear</string>
    <string name="signature">Signature</string>
    <string name="enterText">Enter text</string>
    <string name="watermark">Watermark</string>
    <string name="text">Text</string>
    <string name="overlay">Overlay</string>
    <string name="colorEffect">Color Effect</string>
    <string name="idCard">ID Card</string>
    <string name="imageToText">Image To Text</string>
    <string name="note">Note</string>
    <string name="qrGenerator">QR Generate</string>
    <string name="qrCodeType">QR-Code Type</string>
    <string name="savedDocument">Saved Document</string>
    <string name="scanner">Scanner</string>
    <string name="document">Document</string>
    <string name="book">Book</string>
    <string name="photo">Photo</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="qrReader">QR Reader</string>
    <string name="qrCodeResult">QR Code Result</string>
    <string name="areUSure">Are you Sure ?</string>
    <string name="deleteThisDoc">you want to delete this Document ?</string>
    <string name="saveChanges">Save Changes?</string>
    <string name="changesBeLost">Your unsaved changes will be lost.</string>
    <string name="saveChangesBeforeLost">Save Changes before closing?</string>
    <string name="sendToMail">Send to Mail</string>
    <string name="enterEmailId">Enter E-mail Id</string>
    <string name="cancel">Cancel</string>
    <string name="saveAsPdf">Save as PDF</string>
    <string name="rename">Rename</string>
    <string name="saveToGallery">Save to Gallery</string>
    <string name="inputText">Input Text</string>
    <string name="savePdfWithPass">Save PDF With Password</string>
    <string name="enterPdfName">Enter a name for the PDF</string>
    <string name="setPdfPass">Set PDF password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="saveAsImage">Share as Image</string>
    <string name="shareAsPdf">Share as PDF</string>
    <string name="sharePdfPass">Share PDF With Password</string>
    <string name="setDocumentName">Set Document Name</string>
    <string name="enterDocumentName">Enter Document Name</string>
    <string name="importFromGallery">Import from Gallery</string>
    <string name="sortBy">Sort By</string>
    <string name="shareAll">Share all</string>
    <string name="viewMode">View Mode</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="createNewFolder">Create New Folder</string>
    <string name="enterFolderName">Folder Name</string>
    <string name="noDocumentFound">No documents found</string>
    <string name="move">Move</string>
    <string name="moveFolder">Move To</string>
    <string name="tapToAddNew">Tap to Add New</string>
    <string name="PURCHASE_NO_AD">purchase_no_ad</string>
    <string name="license_key"></string>
    <string name="purchase_text">Your purchase was successful!</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="action">Actions</string>
    <string name="id_card">ID Card</string>
    <string name="scan_your_id_cards_license">Scan your ID Cards,\n License</string>
    <string name="business_card">Business Card</string>
    <string name="scan_your_business_cards">Scan your Business \nCards</string>
    <string name="scan_image">Scan Image</string>
    <string name="scan_your_images_pictures">Scan your Images/\nPictures</string>
    <string name="academic_docs">Academic Docs</string>
    <string name="scan_your_academic_docs">Scan your Academic \nDocs</string>
    <string name="recents">Recents</string>
    <string name="see_your_most_recent_scans_projects">See Your Most Recent Scans/Projects</string>
    <string name="scanned_docs">Scanned Docs</string>
    <string name="signed_docs">Signed docs</string>
    <string name="photos">Photos</string>
    <string name="acd_docs">Acd Docs</string>
    <string name="files">Files</string>
    <string name="convert_to_pdf">Image to Pdf</string>
    <string name="sign_document">Sign Document</string>
    <string name="orignal">Orignal</string>
    <string name="docs">Docs</string>
    <string name="enhance">Enhance</string>
    <string name="details">Details</string>
    <string name="rename_file">Rename File</string>
    <string name="enter_text">Enter text</string>
    <string name="are_you_sure_you_want_to_n_delete">Are you sure you want to\n delete?</string>
    <string name="file_name">File Name</string>
    <string name="page_size">Page Size</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="prepare_your_selected_media">Prepare your Selected Media</string>
    <string name="_8_of_11_ready">8 of 11 Ready</string>
    <string name="transparency">Transparency</string>
    <string name="vertical_position">Vertical Position</string>
    <string name="horizontal_position">Horizontal Position</string>
    <string name="watermark_on_page">Watermark on Page</string>
    <string name="add_watermark">Add Watermark</string>
    <string name="select_file">Select File</string>
    <string name="top">Top</string>
    <string name="middle">Middle</string>
    <string name="bottom">Bottom</string>
    <string name="end_page">End Page</string>
    <string name="start_page">Start Page</string>
    <string name="select_image_for_watermark">Select image for watermark</string>
    <string name="select_image">Select Image</string>
</resources>