<!-- res/layout/activity_pdf_watermarking.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="75dp">

        <!-- Select PDF Button -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9ssp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:text="Select File for Sign" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_marginTop="@dimen/_9ssp"

            android:background="@drawable/language_unselected_item_bg">


            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Filename.PDF"
                android:id="@+id/filePathTextView"
                android:textColor="@color/black"

                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:layout_width="89dp"
                android:layout_height="42dp"
                android:text="@string/select_file"
                android:textSize="@dimen/_10ssp"
                android:background="@drawable/btn_select_file_bg"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:id="@+id/selectPdfButton"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                />


        </RelativeLayout>

        <!-- Watermark Type Selection -->


        <!-- Select Image Button (visible when Image option is selected) -->

        <TextView
            android:id="@+id/fontSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9ssp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:text="@string/select_image_for_watermark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_marginTop="@dimen/_9ssp"
            android:background="@drawable/language_unselected_item_bg">


            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Filename.PDF"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:id="@+id/imagePathTextView"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:text="@string/select_image"
                android:textSize="@dimen/_10ssp"
                android:background="@drawable/btn_select_file_bg"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:id="@+id/selectImageButton"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                />


        </RelativeLayout>



        <!-- Transparency Section -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_73sdp"
            android:layout_marginTop="@dimen/_9ssp"
            android:background="@drawable/language_unselected_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="21dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:text="@string/transparency" />

            <TextView
                android:id="@+id/transparencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/action_sub_text_color"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="21dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10ssp"
                android:text="50%" />

            <SeekBar
                android:id="@+id/transparencySeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:layout_below="@+id/transparencyValue"
                android:progress="50"
                android:progressTint="@color/red"
                android:thumbTint="@color/red"
                android:progressBackgroundTint="@color/seekbara_text_color"/>



        </RelativeLayout>





        <!-- Position Selection -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_78sdp"
            android:layout_marginTop="@dimen/_9ssp"
            android:background="@drawable/language_unselected_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="21dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/heading"
                android:text="@string/vertical_position" />



            <RadioGroup
                android:id="@+id/verticalPositionGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/positionTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:text="@string/top" />
                <RadioButton
                    android:id="@+id/positionMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:layout_marginStart="28dp"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:text="@string/middle" />
                <RadioButton
                    android:id="@+id/positionBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:layout_marginStart="28dp"
                    android:text="@string/bottom" />
            </RadioGroup>




        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_78sdp"
            android:layout_marginTop="@dimen/_9ssp"
            android:background="@drawable/language_unselected_item_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="21dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/heading_hori"
                android:text="@string/horizontal_position" />



            <RadioGroup
                android:id="@+id/horizontalPositionGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading_hori"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/positionLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:text="@string/left" />
                <RadioButton
                    android:id="@+id/positionCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:layout_marginStart="28dp"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:text="@string/center" />
                <RadioButton
                    android:id="@+id/positionRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red"
                    android:textColor="@color/action_sub_text_color"
                    android:textSize="@dimen/_8ssp"
                    android:layout_marginStart="28dp"
                    android:text="@string/right" />
            </RadioGroup>




        </RelativeLayout>


        <!-- Page Range Section -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9ssp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:text="@string/watermark_on_page" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/red"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startPageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/start_page"
                    android:inputType="number"
                    android:background="@drawable/language_unselected_item_bg"
                    android:textColorHint="@color/red"/>
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="@color/red"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endPageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/end_page"
                    android:background="@drawable/language_unselected_item_bg"

                    android:inputType="number"
                    android:textColorHint="@color/red"/>
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>



        <!-- Add Watermark Button -->



    </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:text="@string/add_watermark"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/btn_add_text_ok_bg"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/_9ssp"
        android:fontFamily="@font/poppins_semibold"
        android:id="@+id/addWatermarkBtn"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="28dp"
        android:paddingBottom="10dp"
        />

</RelativeLayout>
