<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@drawable/dailog_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/gilroy_bold"
        android:textColor="@color/splash_bg_color"
        android:textSize="@dimen/_17ssp"
        android:layout_marginTop="27dp"
        android:id="@+id/title"/>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:paddingStart="18dp"
            android:layout_marginTop="20dp"
            android:paddingEnd="18dp"
            app:boxStrokeColor="@color/red"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/enter_password"
                android:textColorHint="@color/red"/>

        </com.google.android.material.textfield.TextInputLayout>



<!--        android:background="@drawable/edittext_bg"-->




    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp">


        <TextView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_38sdp"
            android:text="@string/cancel"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/btn_add_text_cancel_bg"
            android:textColor="#878787"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/cancelBtn"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:paddingEnd="43dp"
            android:paddingStart="43dp"
            />

        <TextView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_38sdp"
            android:text="@string/submit"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/btn_add_text_ok_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/saveBtn"
            android:layout_marginStart="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />





    </LinearLayout>




</LinearLayout>